--- a/src/app/company/entity/view/view.component.html
+++ b/src/app/company/entity/view/view.component.html
@@ -1,30 +1,35 @@
-<div class="row">
-    <div class="col-md-11">
-      <div class="card">
-        <div class="card-body">
-          <div class="card-title">View Entities</div>
-          <!-- Form -->
-          <div class="row">
-            <div class="col-md-2">
-              <p
-                class="btn btn-secondary btn-style"
-                [routerLink]="['/company/entities/create']"
-                [routerLinkActive]="'active'"
-              >
-                <span class="fa fa-plus btn-padding"></span>Create Entity
-              </p>
+<div class="container-fluid vh-cstm">
+   <br><br>
+  <div class="row">
+      <div class="col-md-12">
+        <div class="card">
+          <div class="card-body">
+          
+            <!-- Form -->
+            <div class="row">
+              <div class="col-md-10">
+                  <div class="card-title">View Entities</div>
+              </div>
+              <div class="col-md-2">
+                <p
+                  class="btn btn-secondary btn-style"
+                  [routerLink]="['/company/entities/create']"
+                  [routerLinkActive]="'active'"
+                >
+                  <span class="fa fa-plus btn-padding"></span>Create Entity
+                </p>
+              </div>
             </div>
-          </div>
-  
-          <!-- Table -->
-          <app-generic-table [cols]="cols" [data]="entityList" component="entity" [showDelete]="true" [showEdit]="true"></app-generic-table>
-          <p-confirmDialog header="Do you want to delete selected records?" icon="pi pi-exclamation-triangle"></p-confirmDialog>
+    
+            <!-- Table -->
+            <app-generic-table [cols]="cols" [data]="entityList" component="entity" [showDelete]="true" [showEdit]="true"></app-generic-table>
+            <p-confirmDialog header="Do you want to delete selected records?" icon="pi pi-exclamation-triangle"></p-confirmDialog>
 
+          </div>
         </div>
       </div>
-    </div>
   </div>
-
+</div>
   <app-generic-edit-modal header="Update Entity" [data]="updatePayload" component="entity" >
     <div id="edit-container">
       <div id="left-container-edit">
