--- a/src/app/company/reporting/reporting.component.html
+++ b/src/app/company/reporting/reporting.component.html
@@ -1,5 +1,5 @@
-<div class="row">
-  <div class="col-md-11">
+<div class="row" id="data-tabcstm">
+  <div class="col-md-12">
     <div class="card">
       <div class="card-body">
         <div class="card-title">Reporting</div>
@@ -57,7 +57,7 @@
             [disabled]="fromDate.invalid || toDate.invalid"
             (click)="submitForm()"
             type="button"
-            class="btn btn-success"
+            class="btn btn-theme"
           >
             Submit
           </button>
