--- a/src/app/pages/layout/header/header.component.html
+++ b/src/app/pages/layout/header/header.component.html
@@ -5,7 +5,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
           <a class="navbar-brand" href="index.html">
             <img class="logo" src="../../../../assets/images/logo.png" alt="image">
-            <img class="logo-stiky" src="../../../../assets/images/logo.png" alt="image">
+            <img class="logo-stiky" src="../../../../assets/images/logo_dark.png" alt="image">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
