--- a/src/app/company/layout/sidebar/sidebar.component.html
+++ b/src/app/company/layout/sidebar/sidebar.component.html
@@ -795,7 +795,8 @@
     <ul class="nav-container-child" *ngIf="agentsOpen">
       <li [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/company/agents']" [routerLinkActive]="'active'">
         View</li>
-      <li [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/company/agents/add']" [routerLinkActive]="'active'">
+      <li [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/company/agents/add']"
+        [routerLinkActive]="'active'">
         Create</li>
     </ul>
 
