--- a/src/app/company/agents/list/list.component.css
+++ b/src/app/company/agents/list/list.component.css
@@ -50,3 +50,12 @@
         margin-top: 10px;
     }
 }
+.ht-45{
+    height: 38px;
+}
+.ht-wrap{
+    justify-content: right;
+}
+.pd-left{
+    padding-left: 0px;
+}
