--- a/src/app/company/agents/list/list.component.html
+++ b/src/app/company/agents/list/list.component.html
@@ -1,24 +1,35 @@
+<br>
 <div class="row">
     <div class="col-md-11">
       <div class="card" id="add-agent-card">
         <div class="right">
           <div class="card" id="container-card-right">
-            <div class="card-body">
-              <div class="card-title">
-                All Agents<br />
-                <a href="">Download Chat History</a>
-                <div id="btn-group-container">
-                  <div class="dropdown">
-                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Agent Type
-                  </button>
-                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="#">All Agent</a>
-                    <a class="dropdown-item" href="#">Invited Agent</a>
-                  </div>
+            <div class="">
+              <div class="row">
+                <div class="col-lg-4 pd-left">
+                  All Agents
+                 
                 </div>
+                
+                <div class="col-lg-8 text-right">
+                    <div class="d-flex ht-wrap">
+                        <a href="" class="btn btn-theme ht-45">Download Chat History</a>&nbsp;&nbsp;&nbsp;
+                        <div id="btn-group-container">
+                            <div class="dropdown">
+                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              Agent Type
+                            </button>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                              <a class="dropdown-item" href="#">All Agent</a>
+                              <a class="dropdown-item" href="#">Invited Agent</a>
+                            </div>
+                          </div>
+                        </div>
+                        </div>
+               
                 </div>
               </div>
+            
               <!-- Form -->
             </div>
 
