--- a/src/app/company/layout/sidebar/sidebar.component.html
+++ b/src/app/company/layout/sidebar/sidebar.component.html
@@ -800,12 +800,12 @@
         Create</li>
     </ul>
 
-    <ul class="nav-container-child" *ngIf="agentsOpen">
+    <!-- <ul class="nav-container-child" *ngIf="agentsOpen">
       <li [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/company/agents']" [routerLinkActive]="'active'">
         View</li>
       <li [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/company/agents/add']"
         [routerLinkActive]="'active'">Create</li>
-    </ul>
+    </ul> -->
 
 
   </ul>
