payment component updated

--- a/src/app/company/payments/payment/payment.component.html
+++ b/src/app/company/payments/payment/payment.component.html
@@ -139,7 +139,7 @@
                   <!-- <ngx-paypal [config]="payPalConfig">
                   </ngx-paypal> -->
 
-                  <button type="submit" class="button" id="rzp-button1" (click)="payWithRazorpay(cost)"
+                  <button type="submit" class="button" id="rzp-button1" (click)="payWithRazorpay()"
                     *ngIf="indiaPayment">
                     Pay
                   </button>
