--- a/src/app/company/profile/profile.component.html
+++ b/src/app/company/profile/profile.component.html
@@ -1,17 +1,17 @@
+
+<br>
+<div class="container-fluid">
 <div class="row">
-  <div class="col-md-11">
-    <div class="card" id="add-agent-card">
+  <div class="col-md-6 offset-md-3">
+    <div class="" id="add-agent-card">
       <div class="right">
-        <div class="card" id="container-card-right">
-          <form>
-            <div class="card-body">
-
-              <!-- <div class="card-title">
-                  Payment
-                </div> -->
-              <!-- Form -->
+         <div class="">
+            <div class="card-title">
+              <h5>Edit Profile</h5>
             </div>
-
+          </div>
+        <div class="" id="container-card-right">
+          <form class="bg-white">
             <!-- Form -->
             <div class="row">
               <!-- First Name -->
@@ -46,8 +46,8 @@
               </div>
 
               <div class="col-xs-12 col-md-12 col-sm-12">
-                <button type="button" class="btn btn-success">Submit</button>
-                <button type="button" class="btn btn-secondary">Cancel</button>
+                <button type="button" class="btn btn-theme">Submit</button>&nbsp;&nbsp;
+                <button type="button" class="btn btn-theme">Cancel</button>
               </div>
             </div>
           </form>
@@ -57,4 +57,5 @@
       </div>
     </div>
   </div>
+</div>
 </div>
