--- a/src/app/company/settings/settings.component.html
+++ b/src/app/company/settings/settings.component.html
@@ -1,20 +1,22 @@
-<div class="row">
-  <div class="col-md-12">
-    <div class="card" id="add-agent-card">
+<br>
+<div class="container-fluid">
+  <div class="row">
+  <div class="col-md-6 offset-md-3">
+    <div class="" id="add-agent-card">
       <div class="right">
-        <div class="card" id="container-card-right">
-          <div class="card-body">
+        <div class="" id="container-card-right">
+          <div class="">
             <div class="card-title">
               <h5>Change Password</h5>
             </div>
           </div>
 
           <!-- Form -->
-          <form [formGroup]="settingForm">
+          <form [formGroup]="settingForm" class="bg-white">
             <div class="row">
 
               <!-- Current Password -->
-              <div class="col-xs-12 col-md-6 form-group">
+              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12  form-group">
                 <label for="exampleFormControlInput1">Current Password*</label>
                 <input type="password" class="form-control" placeholder="Current Password"
                   formControlName="current_password">
@@ -28,10 +30,10 @@
 
                 </div>
               </div>
-              <div class="col-md-6"></div>
+             
 
               <!-- Password -->
-              <div class="col-xs-12 col-md-6 form-group">
+              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12  form-group">
                 <label for="exampleFormControlInput1">New Password*</label>
                 <input type="password" class="form-control" placeholder="New Password" formControlName="password">
                 <div
@@ -46,10 +48,10 @@
                   </p>
                 </div>
               </div>
-              <div class="col-md-6"></div>
+             
 
               <!-- Confirm Password -->
-              <div class="col-xs-12 col-md-6 form-group">
+              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 form-group">
                 <label for="exampleFormControlInput1">Confirm Password*</label>
                 <input type="password" class="form-control" placeholder="Confirm Password"
                   formControlName="confirm_password">
@@ -67,8 +69,8 @@
               </div>
 
 
-              <div class="col-xs-12 col-md-12 col-sm-12">
-                <button type="button" class="btn btn-success" [disabled]="settingForm.invalid"
+              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <button type="button" class="btn btn-theme" [disabled]="settingForm.invalid"
                   (click)="changePassword()">Change Password</button>
                 <!-- <button type="button" class="btn btn-secondary">Cancel</button> -->
               </div>
@@ -80,4 +82,6 @@
       </div>
     </div>
   </div>
+</div>
+
 </div>
