--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -850,3 +850,6 @@ background: rgba(0,0,0,0.35);
   padding-left:5px!important;
   padding-right:5px!important; 
 }
+.bg-white{
+	background-color: #fff;
+}
