--- a/src/app/agent/layout/sidebar/sidebar.component.html
+++ b/src/app/agent/layout/sidebar/sidebar.component.html
@@ -5,9 +5,11 @@
             <p-avatar *ngIf="agentDetails === null" label="PT" shape="circle" styleClass="avatar-label"></p-avatar>
             <p-avatar *ngIf="agentDetails !== null" [image]="agentDetails?.profile_pic" shape="circle"></p-avatar>
             &nbsp;{{agentDetails?.first_name}} {{agentDetails?.last_name}} 
-            &nbsp; <button class="notification-button"  pBadge [value]="notificationsList.length.toString()" (click)="op.toggle($event)" pButton icon="pi pi-bell"></button>
-            <br/>
-            <button pButton class="edit-header-button" (click)="openEditPopup()" label="Edit" ></button>
+            &nbsp; <button id="tired" class="notification-button"  pBadge [value]="notificationsList.length.toString()" (click)="op.toggle($event)" pButton icon="pi pi-bell"></button>
+           <div class="fl-1">
+               <button pButton class="edit-header-button" (click)="openEditPopup()" label="Edit" ></button>
+           </div>
+            
         </h3>
     </div>
 
