--- a/src/app/company/company.component.css
+++ b/src/app/company/company.component.css
@@ -34,10 +34,7 @@
     border-bottom-right-radius: 10px;
     cursor: pointer;
     transition: transform 0.3s;
-    position: absolute;
-    color: whitesmoke;
-    top: 7px;
-    z-index: 100;
+   
     transition: all 0.5s;
     
 }
@@ -47,7 +44,10 @@
 .navbar-toggle:active i{
     transform: scale(0.8);
 }
-
+.navbar-toggle svg{
+        width: 30px;
+    fill: #fff;
+}
 .title-bar{
     width: 100%;
     height: 50px;
@@ -58,13 +58,14 @@
     align-items: center;
     font-weight: lighter;
     font-size: larger;
+        justify-content: space-between;
     box-shadow: 0 6px 4px -4px rgb(0 0 0 / 15%);
 }
 
-.title-bar #logout-dropdown{
+/*.title-bar #logout-dropdown{
     position: absolute;
     right: 10px;
-}
+}*/
 
 #dropdownMenuLink{
     background-color: #a136bc;
@@ -103,4 +104,68 @@
         left: 0px;
         background-color: black;
     }
+}
+
+#noti-fi{
+   width: 25px;
+    fill: #fff;
+    margin-right: 15px;
+}
+#not-sh{
+    background-color: transparent;
+    border:transparent;
+}
+#not-sh:hover,
+#not-sh:active,
+#not-sh:focus{
+    box-shadow: none;
+    outline: 0;
+    background-color: transparent;
+}
+.dropdown-toggle::after {
+    display: none;
+}
+#after-cont{
+    padding: 0px!important;
+    -webkit-box-shadow: 0px 7px 13px -5px rgba(0,0,0,0.49);
+-moz-box-shadow: 0px 7px 13px -5px rgba(0,0,0,0.49);
+box-shadow: 0px 7px 13px -5px rgba(0,0,0,0.49);
+transform: translate3d(-156px, 39px, 0px);
+    width: 200px;
+}
+#after-cont::after {
+   content: "";
+    border-top: 0.6em solid #fff;
+    border-right: 0.6em solid transparent;
+    border-bottom: 0;
+    border-left: 0.6em solid transparent;
+    transform: rotate( 180deg);
+    position: absolute;
+    top: -8px;
+    right: 0;
+}
+#after-cont a svg{
+    width: 20px;
+    overflow: visible;
+    vertical-align: -4px;
+}
+#after-cont .dropdown-item {
+    padding: 8px 18px; 
+}
+
+#after-cont .dropdown-item:active,
+#after-cont .dropdown-item:hover,
+#after-cont .dropdown-item:focus {
+    color: #000;
+    text-decoration: none;
+    background-color: #9d38bd2e;
+}
+.plan-ex{
+    background: #162137;
+    text-align: center;
+    color: #ffff;
+    font-weight: 100;
+    font-size: 14px;
+    margin-bottom: 10px;
+    padding-right: 38px;
 }
