--- a/src/app/company/payments/payment/payment.component.html
+++ b/src/app/company/payments/payment/payment.component.html
@@ -8,9 +8,9 @@
           Subscribe now to keep on using chatbot without interruption.
         </p>
       </div> -->
-      <div class="d-flex pr-flexer " id="cntct-us">
+      <div class="d-flex pr-flexer " id="cntct-us" >
 
-        <div class="c-flex plan-1" *ngFor="let plan of plans" (click)="changePlan(plan)">
+        <div tabindex="1" class="c-flex plan-1" *ngFor="let plan of plans" (click)="changePlan(plan)">
           <span class="plan-active" *ngIf="activePlan==plan.subscription_name">current plan</span>
           <span class="info-1">{{ plan.subscription_name }}</span>
           <ng-container *ngIf="plan.price_monthly==0; else otherPlans">
