--- a/src/app/company/web-link/web-link.component.html
+++ b/src/app/company/web-link/web-link.component.html
@@ -77,7 +77,7 @@
               </svg>
             </button>
           </div>
-         <div>
+         <div class="col-xs-12 col-md-12 col-lg-12">
            <br>
          </div>
           <div class="col-xs-12 col-md-12 col-lg-12" id="pad-merge">
