bot settings updated

--- a/src/app/company/bot-settings/bot-settings.component.html
+++ b/src/app/company/bot-settings/bot-settings.component.html
@@ -18,7 +18,7 @@
                                 <div class="col-xs-12 col-md-12 form-group">
                                     <div class="img-wrap">
                                         <img
-                                            src="https://media.istockphoto.com/photos/businessman-silhouette-as-avatar-or-default-profile-picture-picture-id476085198?b=1&k=20&m=476085198&s=170667a&w=0&h=Ct4e1kIOdCOrEgvsQg4A1qeuQv944pPFORUQcaGw4oI=">
+                                            src="{{endpoint}}{{botIcon}}">
                                         
 
                                     </div>
