--- a/src/app/company/profile/profile.component.css
+++ b/src/app/company/profile/profile.component.css
@@ -1,3 +1,7 @@
+.file-name-container{
+    word-wrap: break-word;
+    line-break: anywhere;
+}
 .card-title {
   padding-bottom: 15px;
   border-bottom: 1px solid #e1e1e1;
