--- a/src/app/company/payments/invoices/invoices.component.html
+++ b/src/app/company/payments/invoices/invoices.component.html
@@ -1,1 +1,13 @@
-<p>invoices works!</p>
+<br>
+<div class="row">
+    <div class="col-md-11">
+        <div class="card" id="add-agent-card">
+            <div class="right">
+                <div class="card" id="container-card-right">
+            <app-generic-table [cols]="cols" [data]="transactionList" component="invoices" ></app-generic-table>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
