--- a/src/app/company/profile/profile.component.html
+++ b/src/app/company/profile/profile.component.html
@@ -1,113 +1,112 @@
+
 <br>
 <div class="container-fluid">
-  <div class="row">
-    <div class="col-md-6 offset-md-3">
-      <div class="" id="add-agent-card">
-        <div class="right">
-          <div class="">
+<div class="row">
+  <div class="col-md-6 offset-md-3">
+    <div class="" id="add-agent-card">
+      <div class="right">
+         <div class="">
             <div class="card-title">
               <h5>Edit Profile</h5>
             </div>
           </div>
-          <div class="" id="container-card-right">
-            <form class="bg-white">
-              <!-- Form -->
-              <div class="row">
-                <!-- First Name -->
+        <div class="" id="container-card-right">
+          <form [formGroup] = "userDetailForm" class="bg-white">
+            <!-- Form -->
+            <div class="row">
+              <!-- First Name -->
+              <div class="col-xs-12 col-md-12 form-group">
+                <div class="img-wrap">
+                  <img [src]="userDetails?.profile_pic ? userDetails?.profile_pic : 'https://media.istockphoto.com/photos/businessman-silhouette-as-avatar-or-default-profile-picture-picture-id476085198?b=1&k=20&m=476085198&s=170667a&w=0&h=Ct4e1kIOdCOrEgvsQg4A1qeuQv944pPFORUQcaGw4oI='">
+                  <div class="uploder">
+                    
 
-                <div class="col-xs-12 col-md-12 form-group">
-                  <div class="img-wrap">
-                    <img
-                      src="https://media.istockphoto.com/photos/businessman-silhouette-as-avatar-or-default-profile-picture-picture-id476085198?b=1&k=20&m=476085198&s=170667a&w=0&h=Ct4e1kIOdCOrEgvsQg4A1qeuQv944pPFORUQcaGw4oI=">
-                    <div class="uploder">
-
-
-                      <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
-                        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 469.331 469.331"
-                        style="enable-background:new 0 0 469.331 469.331;" xml:space="preserve">
-                        <g>
-                          <path d="M438.931,30.403c-40.4-40.5-106.1-40.5-146.5,0l-268.6,268.5c-2.1,2.1-3.4,4.8-3.8,7.7l-19.9,147.4
+<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+   viewBox="0 0 469.331 469.331" style="enable-background:new 0 0 469.331 469.331;" xml:space="preserve">
+<g>
+  <path d="M438.931,30.403c-40.4-40.5-106.1-40.5-146.5,0l-268.6,268.5c-2.1,2.1-3.4,4.8-3.8,7.7l-19.9,147.4
     c-0.6,4.2,0.9,8.4,3.8,11.3c2.5,2.5,6,4,9.5,4c0.6,0,1.2,0,1.8-0.1l88.8-12c7.4-1,12.6-7.8,11.6-15.2c-1-7.4-7.8-12.6-15.2-11.6
     l-71.2,9.6l13.9-102.8l108.2,108.2c2.5,2.5,6,4,9.5,4s7-1.4,9.5-4l268.6-268.5c19.6-19.6,30.4-45.6,30.4-73.3
     S458.531,49.903,438.931,30.403z M297.631,63.403l45.1,45.1l-245.1,245.1l-45.1-45.1L297.631,63.403z M160.931,416.803l-44.1-44.1
     l245.1-245.1l44.1,44.1L160.931,416.803z M424.831,152.403l-107.9-107.9c13.7-11.3,30.8-17.5,48.8-17.5c20.5,0,39.7,8,54.2,22.4
-    s22.4,33.7,22.4,54.2C442.331,121.703,436.131,138.703,424.831,152.403z" />
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                      </svg>
+    s22.4,33.7,22.4,54.2C442.331,121.703,436.131,138.703,424.831,152.403z"/>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+</svg>
 
-                      <input type="file">
-                    </div>
-
+                     <input (change)="setFile($event)" type="file">
                   </div>
-                  <!--   <label for="exampleFormControlInput1">Profile Pic</label> -->
-
+                 
                 </div>
-
-                <!-- First Name -->
-                <div class="col-xs-12 col-md-6 form-group">
-                  <label for="exampleFormControlInput1">First Name*</label>
-                  <input type="text" class="form-control" placeholder="First Name">
-                </div>
-
-                <!-- Last Name -->
-                <div class="col-xs-12 col-md-6 form-group">
-                  <label for="exampleFormControlInput1">Last Name*</label>
-                  <input type="text" class="form-control" placeholder="Last Name">
-                </div>
-
-                <!-- Email -->
-                <div class="col-xs-12 col-md-6 form-group">
-                  <label for="exampleFormControlInput1">Email*</label>
-                  <input type="text" class="form-control" placeholder="Last Name">
-                </div>
-
-                <!-- Phone -->
-                <div class="col-xs-12 col-md-6 form-group">
-                  <label for="exampleFormControlInput1">Phone Number*</label>
-                  <input type="text" class="form-control" placeholder="Phone Number">
-                </div>
-
-                <div class="col-xs-12 col-md-12 col-sm-12">
-                  <button type="button" class="btn btn-theme">Submit</button>&nbsp;&nbsp;
-                  <button type="button" class="btn btn-theme">Cancel</button>
-                </div>
+              <!--   <label for="exampleFormControlInput1">Profile Pic</label> -->
+                
               </div>
-            </form>
-            <!-- Form Ends -->
+              <div class="file-name-container" *ngIf="fileName !== null"><b>Selected File :</b> {{fileName}}</div>
 
-          </div>
+              <!-- First Name -->
+              <div class="col-xs-12 col-md-6 form-group">
+                <label for="exampleFormControlInput1">First Name*</label>
+                <input type="text" formControlName="first_name" class="form-control" placeholder="First Name">
+              </div>
+
+              <!-- Last Name -->
+              <div class="col-xs-12 col-md-6 form-group">
+                <label for="exampleFormControlInput1">Last Name*</label>
+                <input type="text" formControlName="last_name" class="form-control" placeholder="Last Name">
+              </div>
+
+              <!-- Email -->
+              <div class="col-xs-12 col-md-6 form-group">
+                <label for="exampleFormControlInput1">Email*</label>
+                <input type="text" formControlName="email" class="form-control" placeholder="Last Name">
+              </div>
+
+              <!-- Phone -->
+              <div class="col-xs-12 col-md-6 form-group">
+                <label for="exampleFormControlInput1">Phone Number*</label>
+                <input type="text" formControlName="mobile_no" class="form-control" placeholder="Phone Number">
+              </div>
+
+              <div class="col-xs-12 col-md-12 col-sm-12">
+                <button type="button" (click)="updateUserData()" class="btn btn-theme">Submit</button>&nbsp;&nbsp;
+                <button type="button" class="btn btn-theme">Cancel</button>
+              </div>
+            </div>
+          </form>
+          <!-- Form Ends -->
+
         </div>
       </div>
     </div>
   </div>
+</div>
 </div>
