--- a/src/app/company/training/training.component.html
+++ b/src/app/company/training/training.component.html
@@ -1,1 +1,7 @@
-<p>training works!</p>
+<div class="container-fluid">
+    <div class="card">
+        <div class="card-body">
+          <div class="card-title">Training</div>
+        </div>
+      </div>
+</div>
